Collision Hit方式変更前保存

--- a/imgui.ini
+++ b/imgui.ini
@@ -58,7 +58,7 @@ Collapsed=0
 Pos=0,36
 Size=32,32
 Collapsed=0
-DockId=0x00000007,1
+DockId=0x0000000F,1
 
 [Window][RTV]
 Pos=13,34
@@ -98,7 +98,7 @@ Collapsed=0
 Pos=0,36
 Size=32,32
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x0000000F,0
 
 [Window][##Tool Bar]
 Pos=0,33
@@ -113,31 +113,31 @@ Collapsed=0
 DockId=0x00000005,1
 
 [Window][ Hierarchy]
-Pos=0,34
+Pos=0,33
 Size=11,32
 Collapsed=0
 DockId=0x0000000B,0
 
 [Window][ Inspector]
-Pos=25,34
+Pos=25,33
 Size=7,32
 Collapsed=0
 DockId=0x0000000E,0
 
 [Window][ Project]
-Pos=0,36
-Size=32,32
+Pos=0,34
+Size=32,1
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x0000000F,0
 
 [Window][ Scene]
-Pos=13,34
+Pos=13,33
 Size=10,32
 Collapsed=0
 DockId=0x0000000C,0
 
 [Window][Size Text]
-Pos=25,34
+Pos=25,33
 Size=7,32
 Collapsed=0
 DockId=0x0000000E,2
@@ -149,7 +149,7 @@ Collapsed=0
 DockId=0x0000000E,1
 
 [Window][System]
-Pos=25,34
+Pos=25,33
 Size=7,32
 Collapsed=0
 DockId=0x0000000E,1
@@ -161,7 +161,7 @@ Collapsed=0
 DockId=0x00000005,1
 
 [Window][Game]
-Pos=13,34
+Pos=13,33
 Size=10,32
 Collapsed=0
 DockId=0x0000000C,1
@@ -187,7 +187,7 @@ Size=708,186
 Collapsed=0
 
 [Window][Hierarchy Data]
-Pos=25,34
+Pos=25,33
 Size=7,32
 Collapsed=0
 DockId=0x0000000E,3
@@ -202,18 +202,18 @@ Column 1  Weight=1.6887
 
 [Docking][Data]
 DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=0,31 Size=32,4 Split=Y Selected=0xCCA64F5D
-  DockNode            ID=0x00000006 Parent=0x3BC79352 SizeRef=2560,94 Split=Y Selected=0x1C39D6E4
-    DockNode          ID=0x00000009 Parent=0x00000006 SizeRef=2560,50 HiddenTabBar=1 Selected=0x1C39D6E4
-    DockNode          ID=0x0000000A Parent=0x00000006 SizeRef=2560,42 HiddenTabBar=1 Selected=0xE4AF3456
-  DockNode            ID=0x00000008 Parent=0x3BC79352 SizeRef=2560,1313 Split=Y
-    DockNode          ID=0x00000001 Parent=0x00000008 SizeRef=2560,911 Split=X
-      DockNode        ID=0x00000003 Parent=0x00000001 SizeRef=2066,1539 Split=X Selected=0xCCA64F5D
+  DockNode            ID=0x00000001 Parent=0x3BC79352 SizeRef=2560,1007 Split=Y
+    DockNode          ID=0x00000006 Parent=0x00000001 SizeRef=2560,94 Split=Y Selected=0x1C39D6E4
+      DockNode        ID=0x00000009 Parent=0x00000006 SizeRef=2560,35 HiddenTabBar=1 Selected=0x1C39D6E4
+      DockNode        ID=0x0000000A Parent=0x00000006 SizeRef=2560,57 HiddenTabBar=1 Selected=0xE4AF3456
+    DockNode          ID=0x00000008 Parent=0x00000001 SizeRef=2560,911 Split=X
+      DockNode        ID=0x00000003 Parent=0x00000008 SizeRef=2066,1539 Split=X Selected=0xCCA64F5D
         DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=349,938 Selected=0x788BAA0D
         DockNode      ID=0x00000005 Parent=0x00000003 SizeRef=1715,938 Split=X Selected=0xCCA64F5D
           DockNode    ID=0x0000000D Parent=0x00000005 SizeRef=1959,882 Split=X Selected=0xF3E10FF5
             DockNode  ID=0x0000000B Parent=0x0000000D SizeRef=340,977 Selected=0xD2CD21AB
-            DockNode  ID=0x0000000C Parent=0x0000000D SizeRef=1617,977 CentralNode=1 Selected=0xF3E10FF5
+            DockNode  ID=0x0000000C Parent=0x0000000D SizeRef=1617,977 CentralNode=1 Selected=0xE92E08E1
           DockNode    ID=0x0000000E Parent=0x00000005 SizeRef=599,882 Selected=0xEDB0D437
-      DockNode        ID=0x00000004 Parent=0x00000001 SizeRef=492,1539 Selected=0xF02CD328
-    DockNode          ID=0x00000007 Parent=0x00000008 SizeRef=2560,400 Selected=0x98A88EA8
+      DockNode        ID=0x00000004 Parent=0x00000008 SizeRef=492,1539 Selected=0xF02CD328
+  DockNode            ID=0x0000000F Parent=0x3BC79352 SizeRef=2560,400 Selected=0x98A88EA8
 
