Distortエフェクトの境界線の補完完了

--- a/imgui.ini
+++ b/imgui.ini
@@ -68,7 +68,7 @@ DockId=0x00000005,2
 
 [Window][DockSpace Demo]
 Pos=0,0
-Size=46,32
+Size=2560,1440
 Collapsed=0
 
 [Window][Hierarchy]
@@ -85,7 +85,7 @@ DockId=0x00000004,0
 
 [Window][Menu Bar]
 Pos=0,31
-Size=32,32
+Size=2560,34
 Collapsed=0
 DockId=0x00000009,0
 
@@ -101,8 +101,8 @@ Collapsed=0
 DockId=0x0000000F,0
 
 [Window][##Tool Bar]
-Pos=0,33
-Size=32,32
+Pos=0,67
+Size=2560,57
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -113,32 +113,32 @@ Collapsed=0
 DockId=0x00000005,1
 
 [Window][ Hierarchy]
-Pos=0,33
-Size=11,32
+Pos=0,126
+Size=340,918
 Collapsed=0
 DockId=0x0000000B,0
 
 [Window][ Inspector]
-Pos=25,33
-Size=7,32
+Pos=1962,126
+Size=598,918
 Collapsed=0
 DockId=0x0000000E,0
 
 [Window][ Project]
-Pos=0,34
-Size=32,1
+Pos=0,1046
+Size=2560,394
 Collapsed=0
 DockId=0x0000000F,0
 
 [Window][ Scene]
-Pos=13,33
-Size=10,32
+Pos=342,126
+Size=1618,918
 Collapsed=0
 DockId=0x0000000C,0
 
 [Window][Size Text]
-Pos=25,33
-Size=7,32
+Pos=1962,126
+Size=598,918
 Collapsed=0
 DockId=0x0000000E,2
 
@@ -149,8 +149,8 @@ Collapsed=0
 DockId=0x0000000E,1
 
 [Window][System]
-Pos=25,33
-Size=7,32
+Pos=1962,126
+Size=598,918
 Collapsed=0
 DockId=0x0000000E,1
 
@@ -161,8 +161,8 @@ Collapsed=0
 DockId=0x00000005,1
 
 [Window][Game]
-Pos=13,33
-Size=10,32
+Pos=342,126
+Size=1618,918
 Collapsed=0
 DockId=0x0000000C,1
 
@@ -187,8 +187,8 @@ Size=708,186
 Collapsed=0
 
 [Window][Hierarchy Data]
-Pos=25,33
-Size=7,32
+Pos=1962,126
+Size=598,918
 Collapsed=0
 DockId=0x0000000E,3
 
@@ -201,11 +201,11 @@ Column 0  Weight=0.3113
 Column 1  Weight=1.6887
 
 [Docking][Data]
-DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=0,31 Size=32,4 Split=Y Selected=0xCCA64F5D
-  DockNode            ID=0x00000001 Parent=0x3BC79352 SizeRef=2560,1014 Split=Y
-    DockNode          ID=0x00000006 Parent=0x00000001 SizeRef=2560,94 Split=Y Selected=0x1C39D6E4
+DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=0,31 Size=2560,1409 Split=Y Selected=0xCCA64F5D
+  DockNode            ID=0x00000001 Parent=0x3BC79352 SizeRef=2560,1013 Split=Y
+    DockNode          ID=0x00000006 Parent=0x00000001 SizeRef=2560,93 Split=Y Selected=0x1C39D6E4
       DockNode        ID=0x00000009 Parent=0x00000006 SizeRef=2560,34 HiddenTabBar=1 Selected=0x1C39D6E4
-      DockNode        ID=0x0000000A Parent=0x00000006 SizeRef=2560,58 HiddenTabBar=1 Selected=0xE4AF3456
+      DockNode        ID=0x0000000A Parent=0x00000006 SizeRef=2560,57 HiddenTabBar=1 Selected=0xE4AF3456
     DockNode          ID=0x00000008 Parent=0x00000001 SizeRef=2560,918 Split=X
       DockNode        ID=0x00000003 Parent=0x00000008 SizeRef=2066,1539 Split=X Selected=0xCCA64F5D
         DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=349,938 Selected=0x788BAA0D
@@ -213,7 +213,7 @@ DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=0,31 Size=32,4 Split=Y
           DockNode    ID=0x0000000D Parent=0x00000005 SizeRef=1960,882 Split=X Selected=0xF3E10FF5
             DockNode  ID=0x0000000B Parent=0x0000000D SizeRef=340,977 Selected=0xD2CD21AB
             DockNode  ID=0x0000000C Parent=0x0000000D SizeRef=1618,977 CentralNode=1 Selected=0xF3E10FF5
-          DockNode    ID=0x0000000E Parent=0x00000005 SizeRef=598,882 Selected=0x1F3F22F7
+          DockNode    ID=0x0000000E Parent=0x00000005 SizeRef=598,882 Selected=0xEDB0D437
       DockNode        ID=0x00000004 Parent=0x00000008 SizeRef=492,1539 Selected=0xF02CD328
-  DockNode            ID=0x0000000F Parent=0x3BC79352 SizeRef=2560,393 Selected=0x98A88EA8
+  DockNode            ID=0x0000000F Parent=0x3BC79352 SizeRef=2560,394 Selected=0x98A88EA8
 
