--- a/imgui.ini
+++ b/imgui.ini
@@ -125,8 +125,8 @@ Collapsed=0
 DockId=0x0000000E,0
 
 [Window][ Project]
-Pos=0,34
-Size=32,1
+Pos=0,35
+Size=32,32
 Collapsed=0
 DockId=0x0000000F,0
 
@@ -202,18 +202,18 @@ Column 1  Weight=1.6887
 
 [Docking][Data]
 DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=0,31 Size=32,4 Split=Y Selected=0xCCA64F5D
-  DockNode            ID=0x00000001 Parent=0x3BC79352 SizeRef=2560,1013 Split=Y
-    DockNode          ID=0x00000006 Parent=0x00000001 SizeRef=2560,93 Split=Y Selected=0x1C39D6E4
-      DockNode        ID=0x00000009 Parent=0x00000006 SizeRef=2560,34 HiddenTabBar=1 Selected=0x1C39D6E4
-      DockNode        ID=0x0000000A Parent=0x00000006 SizeRef=2560,57 HiddenTabBar=1 Selected=0xE4AF3456
-    DockNode          ID=0x00000008 Parent=0x00000001 SizeRef=2560,918 Split=X
+  DockNode            ID=0x00000001 Parent=0x3BC79352 SizeRef=2560,1056 Split=Y
+    DockNode          ID=0x00000006 Parent=0x00000001 SizeRef=2560,94 Split=Y Selected=0x1C39D6E4
+      DockNode        ID=0x00000009 Parent=0x00000006 SizeRef=2560,33 HiddenTabBar=1 Selected=0x1C39D6E4
+      DockNode        ID=0x0000000A Parent=0x00000006 SizeRef=2560,59 HiddenTabBar=1 Selected=0xE4AF3456
+    DockNode          ID=0x00000008 Parent=0x00000001 SizeRef=2560,960 Split=X
       DockNode        ID=0x00000003 Parent=0x00000008 SizeRef=2066,1539 Split=X Selected=0xCCA64F5D
         DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=349,938 Selected=0x788BAA0D
         DockNode      ID=0x00000005 Parent=0x00000003 SizeRef=1715,938 Split=X Selected=0xCCA64F5D
           DockNode    ID=0x0000000D Parent=0x00000005 SizeRef=1960,882 Split=X Selected=0xF3E10FF5
             DockNode  ID=0x0000000B Parent=0x0000000D SizeRef=340,977 Selected=0xD2CD21AB
             DockNode  ID=0x0000000C Parent=0x0000000D SizeRef=1618,977 CentralNode=1 Selected=0xF3E10FF5
-          DockNode    ID=0x0000000E Parent=0x00000005 SizeRef=598,882 Selected=0xEDB0D437
+          DockNode    ID=0x0000000E Parent=0x00000005 SizeRef=598,882 Selected=0x1F3F22F7
       DockNode        ID=0x00000004 Parent=0x00000008 SizeRef=492,1539 Selected=0xF02CD328
-  DockNode            ID=0x0000000F Parent=0x3BC79352 SizeRef=2560,394 Selected=0x98A88EA8
+  DockNode            ID=0x0000000F Parent=0x3BC79352 SizeRef=2560,351 Selected=0x98A88EA8
 
